--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,13 @@
 </head>
 
 <body>
-    <div id="div1" data-a="a">
-        <div class="a">
-            <div></div>
-            <div></div>
-        </div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div id="test">
+        <div class="red"></div>
     </div>
+    <div class="red"></div>
+    <div class="red"></div>
+    <div class="red"></div>
+    <div class="red"></div>
 
 
     <script src="dom.js"></script>
